@@ -49,7 +49,7 @@ namespace GNU_gama {
    *
    * Checked by tests/gama-local/scripts/check_version.cpp
    */
-  std::string GNU_gama_version() { return "2.18.3"; }
+  std::string GNU_gama_version() { return "2.18.4"; }
 
   std::string GNU_gama_compiler()
   {
