@@ -1,6 +1,13 @@
 	* New glossary of basic terms used in gama-local text output and
 	in documentation.
 
+	* Fixed tests/gama-local/tests/gama-local.sh to work with GNSS
+	vectors (bug in HTML output for inconsistent systems).
+
+	* Fixed a bug in testd/gama-local-xml-results.sh (program
+	check_xml_results). For inconsistent coordinate systems Ydiff part
+	of the vector has its sign changed on output.
+
 
 2022-04-09   Ales Cepek <cepek@gnu.org>
 
